gcc/testsuite/gdc.test/compilable/protection/subpkg/explicit.d
module protection.subpkg.explicit;

package(protection) void commonAncestorFoo();
package(protection.subpkg) void samePkgFoo();
