gcc/testsuite/gdc.test/fail_compilation/protection/subpkg/test1.d
module protection.subpkg.test1;

package(undefined) void foo1();
